# fabric_notebook_uploader

./: .gitignore  INSTALL.md  LICENSE  README.md  auth_cli.py  check_config.py  compile_script.py  config.py  create_data_agent.py  enhanced_data_agent_analysis.py  get_data_agent_details.py  main.py  pyproject.toml  requirements.txt  run_fabric_notebook.py  run_notebook.py  setup_config.py  test_agent.py  test_run.py  upload_agent.py
Sample Data/: clients.csv  employees.csv  invoices.csv  project_tasks.csv  projects.csv
dad/: __init__.py  cli.py
dad/commands/: workflow.py
dad/core/: __init__.py  data_agent.py  framework_utils.py
dad_but_better/: cli.py
dad_fw/: __init__.py  cli.py  convert_nb.py  fabric_data_agent_client.py  run_nb.py
dad_fw/commands/: compile.py  create.py  debug.py  run.py  upload.py  workflow.py
dad_fw/core/: __init__.py  data_agent.py  data_agent_framework.py  fabric_api.py  fabric_auth.py  framework_utils.py
dad_fw/debug/: run_api.py
dad_fw/templates/: data_agent_template.ipynb  data_agent_template_depreciated.ipynb  readme_template.md  testing_template.ipynb
dad_old/: __init__.py  cli.py  create_nb.py  utils.py
dad_old/commands/: __init__.py
dad_old/debug/: run_api.py
dad_old/templates/: data_agent_template.ipynb
debugging/: README.md  create_clean_notebook.py  direct_api_run.py
fabric_notebook_uploader/: __init__.py  data_agent_client.py  run_nb.py  test_agent.py  testing.ipynb
jeff/: README.md  jeff.ipynb  jeff_fabric.py  jeff_testing.ipynb
notebooks/: data_agent_creation.ipynb  data_agent_creation_no_pip.ipynb  simple_test.ipynb  test_notebook.ipynb
scripts/: delete_notebook.py  upload_notebook.py
testing/: generate_notebook.py
