[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dad-fw"
version = "1.0.0"
description = "Data Agent Development Framework - A comprehensive toolkit for creating, managing, and deploying Fabric data agents"
readme = "README.md"
authors = [
    {name = "jlauuuuuu"}
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.19.0",
    "rich>=14.0.0",
    "requests>=2.32.0",
    "azure-identity>=1.15.0", 
    "requests",
    "msfabricpysdkcore",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "nbformat>=5.0.0",
    "ms-fabric-cli",
    "azure-cli"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/jlauuuuuu/fabric_notebook_uploader"
Repository = "https://github.com/jlauuuuuu/fabric_notebook_uploader"
Documentation = "https://github.com/jlauuuuuu/fabric_notebook_uploader#readme"
Issues = "https://github.com/jlauuuuuu/fabric_notebook_uploader/issues"

[project.scripts]
dad-fw = "dad_fw.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["dad_fw*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
dad_fw = ["templates/**/*", "*.json"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
