[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dad-fw"
version = "1.0.0"
description = "Data Agent Development Framework - A comprehensive toolkit for creating, managing, and deploying Fabric data agents"
readme = "README.md"
authors = [
    {name = "jlauuuuuu"}
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.19.0",
    "rich>=14.0.0",
    "requests>=2.32.0",
    "azure-identity>=1.15.0",
    "msfabricpysdkcore",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "nbformat>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/jlauuuuuu/fabric_notebook_uploader"
Repository = "https://github.com/jlauuuuuu/fabric_notebook_uploader"
Documentation = "https://github.com/jlauuuuuu/fabric_notebook_uploader#readme"
Issues = "https://github.com/jlauuuuuu/fabric_notebook_uploader/issues"

[project.scripts]
dad-fw = "dad_fw.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["dad_fw*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
dad_fw = ["templates/**/*", "*.json"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pixi.project]
channels = ["conda-forge", "pyviz"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.9,<3.13"
pip = "*"
# Core dependencies from conda-forge
typer = ">=0.19.0"
rich = ">=14.0.0"
requests = ">=2.32.0"
python-dotenv = ">=1.0.0"
nbformat = ">=5.0.0"
# SSL/Certificate support
ca-certificates = "*"
certifi = "*"
openssl = "*"

[tool.pixi.pypi-dependencies]
# Only essential PyPI-only packages
msfabricpysdkcore = "*"
azure-identity = ">=1.15.0"
openai = ">=1.0.0"
dad-fw = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
pytest = ">=7.0.0"
black = ">=22.0.0"
flake8 = ">=4.0.0"
mypy = ">=0.950"
jupyter = "*"
ipykernel = "*"

[tool.pixi.environments]
default = { features = [] }
dev = { features = ["dev"] }

[tool.pixi.tasks]
install = "pip install -e ."
test = "pytest"
format = "black dad_fw"
lint = "flake8 dad_fw"
